# algebraic_immunity

./: .gitignore  .python-version  404.html  Cargo.toml  README.md  construct_wheel_url.py  index.html  objects.inv  pyproject.toml  sitemap.xml  t.py
.github/workflows/: CI.yml
api/: index.html
docs/: mkdocs.yml
docs/docs/: api.md  index.md
src/: ai.rs  algebraic_immunity.rs  boolean_function.rs  lib.rs  vandermonde.rs
tests/: test_ai_calculation.py  test_restricted_ai_calculation.py
