[package]
name = "algebraic_immunity"
version = "0.1.0"
edition = "2021"
authors = ["LucaBonamino"]
description = "A Rust-based Python package to compute the algebraic immunity of Boolean functions."
homepage = "https://github.com/LucaBonamino/algebraic_immunity"
repository = "https://github.com/LucaBonamino/algebraic_immunity"

[lib]
name = "algebraic_immunity"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.23.0"
itertools = "0.10"
rayon = "1.10"

[profile.release]
opt-level = 3
