[package]
name = "algebraic_immunity"
version = "1.2.1"
edition = "2021"
authors = ["LucaBonamino"]
description = "A Rust-based Python package to compute the algebraic immunity and restricted algebraic immunity of Boolean functions."
homepage = "https://github.com/LucaBonamino/algebraic_immunity"
repository = "https://github.com/LucaBonamino/algebraic_immunity"
documentation = "https://LucaBonamino.github.io/algebraic_immunity/"
categories = ["mathematics", "cryptography", "algebra"]
keywords = ["cryptography", "algebra", "Boolean-functions"]

[lib]
name = "algebraic_immunity"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.23.0"
itertools = "0.10"
rayon = "1.10"
algebraic_immunity_ext = { package = "algebraic_immunity", version = "0.3.2" }

[profile.release]
opt-level = 3
