[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "algebraic_immunity"
authors = [
    { name = "LucaBonamino"}
]
requires-python = ">=3.6"
description = "A package for computing the algebraic immunity and restricted algebraic immunity of Boolean functions."
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
Documentation = "https://LucaBonamino.github.io/algebraic_immunity/"
Homepage = "https://github.com/LucaBonamino/algebraic_immunity"
Repository = "https://github.com/LucaBonamino/algebraic_immunity"